--- a/src/main/webapp/secured/user/pretragaPregledDogadaja.xhtml
+++ b/src/main/webapp/secured/user/pretragaPregledDogadaja.xhtml
@@ -51,71 +51,7 @@
 
 
     <h:form id="mainForm">
-        <p:panel id="panel_unos" header="Unos / ažuriranje događaja" style="margin-top:10px; color: #dfefff" toggleable="true"
-                 toggleSpeed="500"
-                 toggleableHeader="true" widgetVar="widgetInput">
-            <h:panelGrid>
-                <p:messages id="messages" showDetail="true" closable="true">
-                    <p:autoUpdate/>
-                </p:messages>
-            </h:panelGrid>
-            <h:panelGrid id="panelGridInputForm" columns="2">
-                <p:outputLabel for="sifraDogadajaInput" value="Šifra događaja:   "/>
-                <p:inputText id="sifraDogadajaInput"
-                             value="#{pretragaPregledDogadajaController.dogadajDto.sifraDogadaja}"
-                             readonly="true" disabled="true"/>
-                <p:outputLabel for="nazivDogadaja" value="Naziv događaja   :   "/>
-                <p:inputTextarea id="nazivDogadaja"
-                                 value="#{pretragaPregledDogadajaController.dogadajDto.nazivDogadaja}" rows="3"
-                                 cols="40"
-                                 maxlength="250" autoResize="false" required="false"
-                                 requiredMessage="Naziv događaja je obavezan podatak!"/>
-
-                <p:outputLabel for="grad" value="Grad:   "/>
-                <p:selectOneMenu id="grad"
-                                 value="#{pretragaPregledDogadajaController.dogadajDto.gradDogadajaDto.sifraGrada}"
-                                 filter="true"
-                                 filterMatchMode="startsWith" style="width:250px" required="false"
-                                 requiredMessage="Grad je obavezan podatak!">
-                    <f:selectItems value="#{pretragaPregledDogadajaController.gradSelectItems}"/>
-                </p:selectOneMenu>
-
-                <p:outputLabel for="vrijemeOd" value="Vrijeme od   :"/>
-                <p:calendar id="vrijemeOd"
-                            value="#{pretragaPregledDogadajaController.dogadajDto.vrijemeOd}" locale="de"
-                            pattern="dd.MM.yyyy HH:mm">
-                    <f:converter converterId="LocalDateConverter"/>
-                </p:calendar>
-
-                <p:outputLabel for="vrijemeDo" value="Vrijeme do   :"/>
-                <p:calendar id="vrijemeDo"
-                            value="#{pretragaPregledDogadajaController.dogadajDto.vrijemeDo}" locale="de"
-                            pattern="dd.MM.yyyy HH:mm">
-                    <f:converter converterId="LocalDateConverter"/>
-                </p:calendar>
-
-                <h:outputText value="Slobodan ulaz: "/>
-                <p:selectBooleanButton id="value1"
-                                       value="#{pretragaPregledDogadajaController.dogadajDto.slobodanUlazBoolen}"
-                                       onLabel="Da"
-                                       offLabel="Ne"
-                                       onIcon="pi pi-check" offIcon="pi pi-times"
-                                       style="width:60px"/>
-                <p:outputLabel for="kretorDogadaja" value="Kreator događaja:   "/>
-                <p:inputText id="kretorDogadaja"
-                             value="#{pretragaPregledDogadajaController.dogadajDto.kreatorDogadaja.korisnickoIme}"
-                             readonly="true" disabled="true"/>
-                <p:commandButton value="Novi" actionListener="#{pretragaPregledDogadajaController.resetDto}" id="novizapis"
-                                 style="margin-right:20px;margin-top:10px;margin-bottom: 10px " ajax="true"
-                                 update="panelGridInputForm, filterAdvanced" icon="pi pi-replay"/>
-                <p:commandButton value="Spremi" actionListener="#{pretragaPregledDogadajaController.save}" id="spremi"
-                                 style="margin-right:20px;margin-top:10px;margin-bottom: 10px" ajax="true"
-                                 update="panel_unos, filterAdvanced" icon="pi pi-save"/>
-
-            </h:panelGrid>
-        </p:panel>
-
-        <p:panel id="panel_filter2" header="Pretraga događaja" style="margin-top:5px; color: #dfefff" toggleable="true"
+        <p:panel id="panel_filter2" header="Pretraga događaja" style="margin-top:10px; color: #dfefff" toggleable="true"
                  toggleSpeed="500" closeSpeed="500" toggleableHeader="true" collapsed="false" widgetVar="widgetFilter">
 
             <h:panelGrid columns="2" id="inputFormPanelGrid">
@@ -195,7 +131,7 @@
                         <f:selectItems
                                 value="#{pretragaPregledDogadajaController.getGrad(pretragaPregledDogadajaController.dogadajFilterDto.odabraneRegije, pretragaPregledDogadajaController.dogadajFilterDto.odabraneZupanije, pretragaPregledDogadajaController.dogadajFilterDto.odabraneVelicineGrada)}"/>
                     </p:selectCheckboxMenu>
-                    <p:outputLabel for="kreatorFilter" value="Kreator:   "/>
+                    <p:outputLabel for="kreatorFilter" value="Moji:   "/>
                     <p:selectOneMenu id="kreatorFilter" value="#{pretragaPregledDogadajaController.dogadajFilterDto.kreator}"
                                      filter="false" style="width:100px">
                         <f:selectItems value="#{pretragaPregledDogadajaController.kreatorFilterSelectItems}"/>
@@ -226,8 +162,9 @@
                     <f:facet name="header">
                         Rezultati pretrage
                     </f:facet>
-                    <p:ajax event="rowSelect" listener="#{pretragaPregledDogadajaController.onTableRowSelect}"
-                            update="mainForm:panel_unos"/>
+                    <p:ajax event="rowSelect" listener="#{pretragaPregledDogadajaController.onTableRowSelect}"/>
+<!--                            update="mainForm:panel_unos"-->
+
                     <p:column headerText="Šifra">
                         <h:outputText value="#{filterDogadajDto.sifraDogadaja}"/>
                     </p:column>
@@ -260,7 +197,7 @@
                         <h:outputText
                                 value="#{filterDogadajDto.gradDogadajaDto.organizacijskaJedinicaDto.nadredenaOrganizacijeDto.nazivOrgJedinice}"/>
                     </p:column>
-                    <p:column headerText="Kreator">
+                    <p:column headerText="Spremljeni">
                         <h:outputText
                                 value="#{filterDogadajDto.kreatorDogadaja.korisnickoIme}"/>
                     </p:column>
@@ -268,6 +205,10 @@
             </h:panelGrid>
         </p:panel>
 
+        <p:panel id="panel_calendar" header="Pregled događaja" style="margin-top:5px; color: #dfefff" toggleable="true"
+                 toggleSpeed="500" closeSpeed="500" toggleableHeader="true" collapsed="false" widgetVar="widgetFilter">
+
+        </p:panel>
 
     </h:form>
 </h:body>
